# PW2Code

./: .gitignore  .gitmodules  ESDB.yml  README.md  settings.h  update_submodules.bat
Assets/: whitelist.txt
Builder/: buildSettings.txt
Global/: Debug.cpp  Debug.h  FileSystem.cpp  FileSystem.h  GameVariables.cpp  GameVariables.h
Headers/: abilities.h  action_order.h  battle_client.h  battle_core.h  battle_events.h  battle_mon.h  battle_setup.h  conditions.h  counters.h  field_effects.h  handler_params.h  items.h  main_module.h  moves.h  personal.h  poke_party.h  pos_effects.h  script.h  server_events.h  server_flow.h  shortcut_menu.h  side_effects.h  species.h  stat_stage.h  trainer_data.h  turn_flag.h  types.h
Libraries/: whitelist.txt
Libraries/Abilities/: Aerilate.cpp  AngerShell.cpp  AromaVeil.cpp  AsOne.cpp  AuraBreak.cpp  BallFetch.cpp  Battery.cpp  BattleBond.cpp  BeastBoost.cpp  Berserk.cpp  BulletProof.cpp  BurnPrevention.cpp  CheekPouch.cpp  Commander.cpp  Competitive.cpp  Costar.cpp  CottonDown.cpp  CudChew.cpp  CuriousMedicine.cpp  Dancer.cpp  DarkAura.cpp  DauntlessShield.cpp  DeltaStream.cpp  DesolateLand.cpp  Disguise.cpp  DragonsMaw.cpp  EarthEater.cpp  ElectricSurge.cpp  EmbodyAspect.cpp  EmergencyExit.cpp  FairyAura.cpp  FlowerVeil.cpp  Fluffy.cpp  Frisk.cpp  FurCoat.cpp  GaleWings.cpp  Galvanize.cpp  GoodAsGold.cpp  Gooey.cpp  GorillaTactics.cpp  (+92 more)
Libraries/FieldEffects/: AuraField.cpp  BeadsOfRuin.cpp  DarkAura.cpp  FairyAura.cpp  RuinField.cpp  SwordOfRuin.cpp  (+3 more)
PW2Builder/: AssetManager.h  Builder.cpp  CMakeLists.txt  buildSettings.txt
(+534 files in other folders)
